ubuntu-dev-tools (0.97) UNRELEASED; urgency=low

  [ Michael Bienia ]
  * lp-shell: Support all to the launchpadlib Python module known service
    names.

 -- Michael Bienia <geser@ubuntu.com>  Thu, 18 Mar 2010 11:01:21 +0100

ubuntu-dev-tools (0.96) lucid; urgency=low

  [ Michael Bienia ]
  * ubuntu-build: missed updating a function call.

  [ Emmet Hikory ]
  * mk-sbuild: Really don't use build-arm-chroot

  [ Daniel Holbach ]
  * hugdaylist, requestsync, doc/requestsync.1: 
    ubuntu-{main,universe}-sponsors → ubuntu-sponsors,
    {ubuntu,motu}-release → ubuntu-release.
  * ubuntutools/ppaput.py: removed, not necessary any more.
  * debian/copyright: removed references to ppaput.

 -- Daniel Holbach <daniel.holbach@ubuntu.com>  Mon, 15 Mar 2010 10:21:31 +0100

ubuntu-dev-tools (0.95) lucid; urgency=low

  * Update reverse-build-depends for lucid

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 08 Mar 2010 13:33:47 +0000

ubuntu-dev-tools (0.94) lucid; urgency=low

  [ Luca Falavigna ]
  * docs/lp-set-dup.1: add manpage for lp-set-dup.
  * debian/control: bump Standards-Version to 3.8.4, no changes needed.

  [ Emmet Hikory ]
  * mk-sbuild: switch to use qemu-debootstrap for foreign chroots
  * mk-sbuild: allow any foreign chroot (may not work, but we can try)
  * pbuilder-dist: allow any foreign chroot (may not work, but we can try)
  * docs/pbuilder-dist.1: update manpage to indicate general architecture
  * pbuilder-dist: add self. before target_distro in powerpc check

 -- Emmet Hikory <persia@ubuntu.com>  Mon, 08 Mar 2010 20:45:09 +0900

ubuntu-dev-tools (0.93) lucid; urgency=low

  [ Scott Moser ]
  * rename mk-sbuild-lv to mk-sbuild, support union-type=aufs

  [ Emmet Hikory ]
  * Support qemu-arm-static -> qemu-kvm-extras-static transition
  * mk-sbuild: automatically install qemu-kvm-extras-static if requested
  * mk-sbuild: conditionally install lvm2 only for lvm-snapshot schroots
  * mk-sbuild: rationalise architecture variables